shesmu-server/src/test/resources/bad/cycle1.shesmu
Define standard_execution()
  Matches standard_execution();
